--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <link rel="stylesheet" href="./css/newstyles.css">
 </head>
 <body class="body">
+
+                <!-- HEADER -->
+
     <header class="header">
-        <!-- Navigation Contact -->
         <div class="header-container container">
         <nav class="navigation">
             <a href="" class="nav-logo link">WEb<span class="studio">Studio</span></a>
@@ -33,6 +35,9 @@
     </div>
     </header>
     <main>
+
+                <!-- SECTION EFECTIVE -->
+
         <section class="section-effective">
             <div class="container">
         <h1 class="table-effective">Effective Solutions for Your Business</h1>
@@ -82,6 +87,9 @@
             </ul>
         </div>
         </section>
+
+                <!-- SECTION TEAM -->
+
         <section class="section-team">
             <div class="container">
             <h2 class="table-team">Our Team</h2>
@@ -233,6 +241,9 @@
             </ul>
         </div>
         </section>
+
+             <!-- SECTION PORTFOLIO -->
+
         <section class="portfolio-section">
             <div class="container">
             <h2 class="table-portfolio">Our Portfolio</h2>
@@ -289,6 +300,9 @@
             </div>
         </section>
     </main>
+
+                <!-- FOOTER -->
+
     <footer class="footer">
         <div class="container allfoot-container">
         <div class="logo-footer-container">
