--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
                 <!-- SECTION EFECTIVE -->
 
-        <section class="section-effective">
+        <!-- <section class="section-effective">
             <div class="container">
         <h1 class="table-effective">Effective Solutions for Your Business</h1>
         <button class="button-effective" type="button">Order Service</button>
@@ -86,11 +86,11 @@
                 </li>
             </ul>
         </div>
-        </section>
+        </section> -->
 
                 <!-- SECTION TEAM -->
 
-        <section class="section-team">
+        <!-- <section class="section-team">
             <div class="container">
             <h2 class="table-team">Our Team</h2>
             <ul class="team-container list">
@@ -240,11 +240,11 @@
                 </li>
             </ul>
         </div>
-        </section>
+        </section> -->
 
              <!-- SECTION PORTFOLIO -->
 
-        <section class="portfolio-section">
+        <!-- <section class="portfolio-section">
             <div class="container">
             <h2 class="table-portfolio">Our Portfolio</h2>
             <ul class="portfolio-list list">
@@ -299,11 +299,11 @@
             </ul>
             </div>
         </section>
-    </main>
+    </main> -->
 
                 <!-- FOOTER -->
 
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="container allfoot-container">
         <div class="logo-footer-container">
     <a href="./index.html" class="foot-logo link">Web<span class="footer-studio">Studio</span></a>
@@ -351,11 +351,11 @@
         </form>
     </div>
 </div>
-    </footer>
+    </footer> -->
 
 <!-- BACKDROP WITH MODAL WINDOW -->
 
-<div class="backdrop">
+<!-- <div class="backdrop">
     <div class="modal">
         <button class="close-button" type="button">
             <svg class="close-button-icon" width="8" height="8" aria-label="modal close icon">
@@ -423,7 +423,7 @@
             </div>
             <button class="rewiew-form-send" type="button">Send</button>
         </form>
-    </div>
+    </div> -->
 </div>
 
 </body>
