--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
                 <li> <a class="navigation-link link" href="">Contacts</a></li>
             </ul>
         </nav>
+        <button class="burger">
+            <svg class="open-burger" width="24" height="24" aria-label="mobile menu footer">
+                <use href="./css/images/icons.svg#icon-burger"></use>
+            </svg>
+        </button>
         <address class="adress">
             <ul class="nav-list list">
                 <li> <a class="adress-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
