--- a/index.html
+++ b/index.html
@@ -429,6 +429,17 @@
             <button class="rewiew-form-send" type="button">Send</button>
         </form>
     </div> -->
+
+                <!-- MOBILE MENU -->
+
+<div class="mobile-menu">
+    <button class="mob-menu-close-btn">
+        <svg class="mbc-btn" width="8" height="8" aria-label="mobile close button">
+            <use href="./css/images/icons.svg#icon-close-black"></use>
+        </svg>
+    </button>
+</div>
+
 </div>
 
 </body>
