--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </svg>
         </button>
         <address class="adress">
-            <ul class="nav-list list">
+            <ul class="adress-list list">
                 <li> <a class="adress-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li> <a class="adress-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
