--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
                 <!-- HEADER -->
 
-    <header class="header">
+    <!-- <header class="header">
         <div class="header-container container">
         <nav class="navigation">
             <a href="" class="nav-logo link">WEb<span class="studio">Studio</span></a>
@@ -38,12 +38,12 @@
             </ul>
         </address>
     </div>
-    </header>
+    </header> -->
     <main>
 
                 <!-- SECTION EFECTIVE -->
 
-        <!-- <section class="section-effective">
+        <section class="section-effective">
             <div class="container">
         <h1 class="table-effective">Effective Solutions for Your Business</h1>
         <button class="button-effective" type="button">Order Service</button>
@@ -56,7 +56,7 @@
                 <li class="advan-item">
                     <div class="icon-container">
                         <svg width="64" height="64" aria-label="icon-srategy">
-                            <use href="./images/icons.svg#icon-antenna-1"></use>
+                            <use href="./css/images/icons.svg#icon-antena"></use>
                         </svg>
                     </div>
                     <h3 class="advantages">Strategy</h3>
@@ -65,7 +65,7 @@
                 <li class="advan-item">
                     <div class="icon-container">
                        <svg width="64" height="64" aria-label="icon-punctuality">
-                        <use href="./images/icons.svg#icon-clock-1"></use>
+                        <use href="./images/icons.svg#icon-clock"></use>
                        </svg> 
                     </div>
                     <h3 class="advantages">Punctuality</h3>
@@ -74,7 +74,7 @@
                 <li class="advan-item"> 
                     <div class="icon-container">
                        <svg width="64" height="64" aria-label="icon-diligence">
-                        <use href="./images/icons.svg#icon-diagram-1"></use>
+                        <use href="./images/icons.svg#icon-diagram"></use>
                        </svg> 
                     </div>
                     <h3 class="advantages">Diligence</h3>
@@ -91,7 +91,7 @@
                 </li>
             </ul>
         </div>
-        </section> -->
+        </section>
 
                 <!-- SECTION TEAM -->
 
