--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <li class="advan-item">
                     <div class="icon-container">
                         <svg width="64" height="64" aria-label="icon-srategy">
-                            <use href="./css/images/icons.svg#icon-antena"></use>
+                            <use href="./images/icons.svg#icon-antena"></use>
                         </svg>
                     </div>
                     <h3 class="advantages">Strategy</h3>
@@ -83,7 +83,7 @@
                 <li class="advan-item"> 
                     <div class="icon-container">
                         <svg width="64" height="64" aria-label="icon-technologies">
-                            <use href="./images/icons.svg#icon-astronaut-1"></use>
+                            <use href="./images/icons.svg#icon-astronaut"></use>
                         </svg>
                     </div>
                     <h3 class="advantages">Technologies</h3>
