--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
                 <!-- HEADER -->
 
-    <!-- <header class="header">
+    <header class="header">
         <div class="header-container container">
         <nav class="navigation">
             <a href="" class="nav-logo link">WEb<span class="studio">Studio</span></a>
@@ -38,7 +38,7 @@
             </ul>
         </address>
     </div>
-    </header> -->
+    </header>
     <main>
 
                 <!-- SECTION EFECTIVE -->
