--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </nav>
         <button class="burger">
             <svg class="open-burger" width="24" height="24" aria-label="mobile menu footer">
-                <use href="./css/images/icons.svg#icon-burger"></use>
+                <use href="./images/icons.svg#icon-burger"></use>
             </svg>
         </button>
         <address class="adress">
