--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
                 <!-- HEADER -->
 
-    <header class="header">
+    <!-- <header class="header">
         <div class="header-container container">
         <nav class="navigation">
             <a href="" class="nav-logo link">WEb<span class="studio">Studio</span></a>
@@ -38,12 +38,12 @@
             </ul>
         </address>
     </div>
-    </header>
+    </header> -->
     <main>
 
                 <!-- SECTION EFECTIVE -->
 
-        <!-- <section class="section-effective">
+        <section class="section-effective">
             <div class="container">
         <h1 class="table-effective">Effective Solutions for Your Business</h1>
         <button class="button-effective" type="button">Order Service</button>
@@ -91,7 +91,7 @@
                 </li>
             </ul>
         </div>
-        </section> -->
+        </section>
 
                 <!-- SECTION TEAM -->
 
@@ -435,7 +435,7 @@
 <div class="mobile-menu">
     <button class="mob-menu-close-btn">
         <svg class="mbc-btn" width="8" height="8" aria-label="mobile close button">
-            <use href="./css/images/icons.svg#icon-close-black"></use>
+            <use href="./images/icons.svg#icon-close-black"></use>
         </svg>
     </button>
 </div>
