advan-mob-finish

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
 
                 <!-- SECTION EFECTIVE -->
 
-        <!-- <section class="section-effective">
+        <section class="section-effective">
             <div class="container">
         <h1 class="table-effective">Effective Solutions for Your Business</h1>
         <button class="button-effective" type="button">Order Service</button>
     </div>
-        </section> -->
+        </section>
         <section class="advan-section">
             <div class="advan-container container">
             <h2 class="visually-hidden">Advantages</h2>
