--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
                 <!-- SECTION EFECTIVE -->
 
-        <section class="section-effective">
+        <!-- <section class="section-effective">
             <div class="container">
         <h1 class="table-effective">Effective Solutions for Your Business</h1>
         <button class="button-effective" type="button">Order Service</button>
@@ -91,11 +91,11 @@
                 </li>
             </ul>
         </div>
-        </section>
+        </section> -->
 
                 <!-- SECTION TEAM -->
 
-        <!-- <section class="section-team">
+        <section class="section-team">
             <div class="container">
             <h2 class="table-team">Our Team</h2>
             <ul class="team-container list">
@@ -245,7 +245,7 @@
                 </li>
             </ul>
         </div>
-        </section> -->
+        </section>
 
              <!-- SECTION PORTFOLIO -->
 
