--- a/index.html
+++ b/index.html
@@ -303,8 +303,8 @@
                 </li>
             </ul>
             </div>
-        </section>
-    </main> -->
+        </section> -->
+    </main>
 
                 <!-- FOOTER -->
 
