--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 
                 <!-- FOOTER -->
 
-    <!-- <footer class="footer">
+    <footer class="footer">
         <div class="container allfoot-container">
         <div class="logo-footer-container">
     <a href="./index.html" class="foot-logo link">Web<span class="footer-studio">Studio</span></a>
@@ -356,7 +356,7 @@
         </form>
     </div>
 </div>
-    </footer> -->
+    </footer>
 
 <!-- BACKDROP WITH MODAL WINDOW -->
 
