--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
                 <!-- SECTION TEAM -->
 
-        <section class="section-team">
+        <!-- <section class="section-team">
             <div class="container">
             <h2 class="table-team">Our Team</h2>
             <ul class="team-container list">
@@ -245,7 +245,7 @@
                 </li>
             </ul>
         </div>
-        </section>
+        </section> -->
 
              <!-- SECTION PORTFOLIO -->
 
