--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
                 <!-- SECTION TEAM -->
 
-        <!-- <section class="section-team">
+        <section class="section-team">
             <div class="container">
             <h2 class="table-team">Our Team</h2>
             <ul class="team-container list">
@@ -245,7 +245,7 @@
                 </li>
             </ul>
         </div>
-        </section> -->
+        </section>
 
              <!-- SECTION PORTFOLIO -->
 
@@ -308,7 +308,7 @@
 
                 <!-- FOOTER -->
 
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="container allfoot-container">
         <div class="logo-footer-container">
     <a href="./index.html" class="foot-logo link">Web<span class="footer-studio">Studio</span></a>
@@ -356,7 +356,7 @@
         </form>
     </div>
 </div>
-    </footer>
+    </footer> -->
 
 <!-- BACKDROP WITH MODAL WINDOW -->
 
