--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
             <ul class="team-container list">
                 <li class="team-list">
                     <img class="worker-photo" 
-                    srcset=""
-                    src="./images/Our_Team/img-1.jpg" alt="Mark Guerrero">
+                    srcset="./images/Rastr_img/1.Tel/Team-1@2x-min.jpg 2x"
+                    src="./images/Rastr_img/1.Tel/Team-1-min.jpg" alt="Mark Guerrero">
                     <div class="team-img-padding"><h3 class="name-team">Mark Guerrero</h3>
                     <p class="job-name">Product Designer</p>
                     <ul class="social-list list">
@@ -139,8 +139,8 @@
                 </li>
                 <li class="team-list">
                     <img class="worker-photo"
-                    srcset="" 
-                    src="./images/Our_Team/img-2.jpg" alt="Tom Ford">
+                    srcset="./images/Rastr_img/1.Tel/Team-2@2x-min.jpg 2x" 
+                    src="./images/Rastr_img/1.Tel/Team-2-min.jpg" alt="Tom Ford">
                     <div class="team-img-padding"><h3 class="name-team">Tom Ford</h3>
                     <p class="job-name">Frontend Developer</p>
                     <ul class="social-list list">
@@ -177,8 +177,8 @@
                 </li>
                 <li class="team-list">
                     <img class="worker-photo" 
-                    srcset=""
-                    src="./images/Our_Team/img-3.jpg" alt="Camila Garcia">
+                    srcset="./images/Rastr_img/1.Tel/Team-3@2x-min.jpg 2x"
+                    src="./images/Rastr_img/1.Tel/Team-3-min.jpg" alt="Camila Garcia">
                     <div class="team-img-padding"><h3 class="name-team">Camila Garcia</h3>
                     <p class="job-name">Marketing</p>
                     <ul class="social-list list">
@@ -215,8 +215,8 @@
                 </li>
                 <li class="team-list">
                     <img class="worker-photo" 
-                    srcset=""
-                    src="./images/Our_Team/img-4.jpg" alt="Daniel Wilson">
+                    srcset="./images/Rastr_img/1.Tel/Team-4@2x-min.jpg 2x"
+                    src="./images/Rastr_img/1.Tel/Team-4-min.jpg" alt="Daniel Wilson">
                     <div class="team-img-padding"><h3 class="name-team">Daniel Wilson</h3>
                     <p class="job-name">UI Designer</p>
                     <ul class="social-list list">
@@ -264,9 +264,10 @@
                 <li class="portfolio-item"> 
                  <div class="container-portfolio">
                     <img 
-                    srcset="./images/Rastr_img/1.Tel/Portfolio-1@2x-min w576,
-                    ./images/Rastr_img/1.Tel/Portfolio-1-min.jpg w288"
-                    sizes="(min-width: 1158px) 360px, (min-width: 768px) 360px, (max-width: 767px) 288px"
+                    srcset="./images/Rastr_img/3.Desktop/Portfolio-1-min.jpg 360w,
+                            ./images/Rastr_img/2.Tablet/Portfolio-1-min.jpg 356w,
+                            ./images/Rastr_img/1.Tel/Portfolio-1-min.jpg 288w"
+                    sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
                     src="./images/Rastr_img/1.Tel/Portfolio-1-min.jpg" alt="banking" width="360">
                     <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
@@ -276,9 +277,10 @@
                 <li class="portfolio-item"> 
                     <div class="container-portfolio">
                     <img 
-                    srcset="./images/Rastr_img/1.Tel/Portfolio-2@2x-min w576,
-                    ./images/Rastr_img/1.Tel/Portfolio-2-min.jpg w288"
-                    sizes="(min-width: 1158px) 360px, (min-width: 768px) 360px, (max-width: 767px) 288px"
+                    srcset="./images/Rastr_img/3.Desktop/Portfolio-2-min.jpg 360w,
+                            ./images/Rastr_img/2.Tablet/Portfolio-2-min.jpg 356w,
+                            ./images/Rastr_img/1.Tel/Portfolio-2-min.jpg 288w"
+                    sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
                     src="./images/Rastr_img/1.Tel/Portfolio-2-min.jpg" alt="cachless" width="360">
                     <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p> 
                 </div>
@@ -288,9 +290,10 @@
                 <li class="portfolio-item"> 
                     <div class="container-portfolio">
                     <img 
-                    srcset="./images/Rastr_img/1.Tel/Portfolio-3@2x-min w576,
-                    ./images/Rastr_img/1.Tel/Portfolio-3-min.jpg w288"
-                    sizes="(min-width: 1158px) 360px, (min-width: 768px) 360px, (max-width: 767px) 288px"
+                    srcset="./images/Rastr_img/3.Desktop/Portfolio-3-min.jpg 360w,
+                            ./images/Rastr_img/2.Tablet/Portfolio-3-min.jpg 356w,
+                            ./images/Rastr_img/1.Tel/Portfolio-3-min.jpg 288w"
+                    sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
                     src="./images/Rastr_img/1.Tel/Portfolio-3-min.jpg" alt="meditation" width="360">
                     <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p> 
                 </div>
@@ -300,9 +303,10 @@
                 <li class="portfolio-item"> 
                     <div class="container-portfolio">
                     <img 
-                    srcset="./images/Rastr_img/1.Tel/Portfolio-4@2x-min w576,
-                    ./images/Rastr_img/1.Tel/Portfolio-4-min.jpg w288"
-                    sizes="(min-width: 1158px) 360px, (min-width: 768px) 360px, (max-width: 767px) 288px"
+                    srcset="./images/Rastr_img/3.Desktop/Portfolio-4-min.jpg 360w,
+                            ./images/Rastr_img/2.Tablet/Portfolio-4-min.jpg 356w,
+                            ./images/Rastr_img/1.Tel/Portfolio-4-min.jpg 288w"
+                    sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
                     src="./images/Rastr_img/1.Tel/Portfolio-4-min.jpg" alt="taxi" width="360">
                     <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p> 
                 </div>
@@ -312,9 +316,10 @@
                 <li class="portfolio-item"> 
                     <div class="container-portfolio">
                     <img 
-                    srcset="./images/Rastr_img/1.Tel/Portfolio-5@2x-min w576,
-                    ./images/Rastr_img/1.Tel/Portfolio-5-min.jpg w288"
-                    sizes="(min-width: 1158px) 360px, (min-width: 768px) 360px, (max-width: 767px) 288px"
+                    srcset="./images/Rastr_img/3.Desktop/Portfolio-5-min.jpg 360w,
+                            ./images/Rastr_img/2.Tablet/Portfolio-5-min.jpg 356w,
+                            ./images/Rastr_img/1.Tel/Portfolio-5-min.jpg 288w"
+                    sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
                     src="./images/Rastr_img/1.Tel/Portfolio-5-min.jpg" alt="screen" width="360">
                     <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
@@ -324,9 +329,10 @@
                 <li class="portfolio-item"> 
                     <div class="container-portfolio">
                     <img 
-                    srcset="./images/Rastr_img/1.Tel/Portfolio-6@2x-min w576,
-                            ./images/Rastr_img/1.Tel/Portfolio-6-min.jpg w288"
-                    sizes="(min-width: 1158px) 576px, (min-width: 768px) 576px, (max-width: 767px) 288px"
+                    srcset="./images/Rastr_img/3.Desktop/Portfolio-6-min.jpg 360w,
+                            ./images/Rastr_img/2.Tablet/Portfolio-6-min.jpg 356w,
+                            ./images/Rastr_img/1.Tel/Portfolio-6-min.jpg 288w"
+                    sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
                     src="./images/Rastr_img/1.Tel/Portfolio-6-min.jpg" alt="oncourses" width="360">
                     <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
