--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
                 <!-- HEADER -->
 
-    <!-- <header class="header">
+    <header class="header">
         <div class="header-container container">
         <nav class="navigation">
             <a href="" class="nav-logo link">WEb<span class="studio">Studio</span></a>
@@ -91,7 +91,7 @@
                 </li>
             </ul>
         </div>
-        </section> -->
+        </section>
 
                 <!-- SECTION TEAM -->
 
@@ -346,7 +346,7 @@
 
                 <!-- FOOTER -->
 
-    <!-- <footer class="footer">
+    <footer class="footer">
         <div class="container allfoot-container">
         <div class="logo-footer-container">
     <a href="./index.html" class="foot-logo link">Web<span class="footer-studio">Studio</span></a>
@@ -394,11 +394,10 @@
         </form>
     </div>
 </div>
-    </footer> -->
+    </footer>
 
 <!-- BACKDROP WITH MODAL WINDOW -->
-
-<!-- <div class="backdrop">
+<div class="backdrop">
     <div class="modal">
         <button class="close-button" type="button">
             <svg class="close-button-icon" width="8" height="8" aria-label="modal close icon">
@@ -466,7 +465,7 @@
             </div>
             <button class="rewiew-form-send" type="button">Send</button>
         </form>
-    </div> -->
+    </div>
 
                 <!-- MOBILE MENU -->
 
