--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
                 <!-- HEADER -->
 
-    <header class="header">
+    <!-- <header class="header">
         <div class="header-container container">
         <nav class="navigation">
             <a href="" class="nav-logo link">WEb<span class="studio">Studio</span></a>
@@ -38,7 +38,7 @@
             </ul>
         </address>
     </div>
-    </header> -->
+    </header> --> -->
     <main>
 
                 <!-- SECTION EFECTIVE -->
@@ -95,7 +95,7 @@
 
                 <!-- SECTION TEAM -->
 
-        <section class="section-team">
+        <!-- <section class="section-team">
             <div class="container">
             <h2 class="table-team">Our Team</h2>
             <ul class="team-container list">
@@ -253,7 +253,7 @@
                 </li>
             </ul>
         </div>
-        </section>
+        </section> -->
 
              <!-- SECTION PORTFOLIO -->
 
@@ -265,8 +265,11 @@
                  <div class="container-portfolio">
                     <img 
                     srcset="./images/Rastr_img/3.Desktop/Portfolio-1-min.jpg 360w,
+                            ./images/Rastr_img/3.Desktop/Portfolio-1@2x-min.jpg 720w,
                             ./images/Rastr_img/2.Tablet/Portfolio-1-min.jpg 356w,
-                            ./images/Rastr_img/1.Tel/Portfolio-1-min.jpg 288w"
+                            ./images/Rastr_img/2.Tablet/Portfolio-1@2x-min.jpg 712w,
+                            ./images/Rastr_img/1.Tel/Portfolio-1-min.jpg 288w,
+                            ./images/Rastr_img/1.Tel/Portfolio-1@2x-min.jpg 576w"
                     sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
                     src="./images/Rastr_img/1.Tel/Portfolio-1-min.jpg" alt="banking" width="360">
                     <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
@@ -278,8 +281,11 @@
                     <div class="container-portfolio">
                     <img 
                     srcset="./images/Rastr_img/3.Desktop/Portfolio-2-min.jpg 360w,
+                            ./images/Rastr_img/3.Desktop/Portfolio-2@2x-min.jpg 720w,
                             ./images/Rastr_img/2.Tablet/Portfolio-2-min.jpg 356w,
-                            ./images/Rastr_img/1.Tel/Portfolio-2-min.jpg 288w"
+                            ./images/Rastr_img/2.Tablet/Portfolio-2@2x-min.jpg 712w,
+                            ./images/Rastr_img/1.Tel/Portfolio-2-min.jpg 288w,
+                            ./images/Rastr_img/1.Tel/Portfolio-2@2x-min.jpg 576w"
                     sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
                     src="./images/Rastr_img/1.Tel/Portfolio-2-min.jpg" alt="cachless" width="360">
                     <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p> 
@@ -291,8 +297,11 @@
                     <div class="container-portfolio">
                     <img 
                     srcset="./images/Rastr_img/3.Desktop/Portfolio-3-min.jpg 360w,
+                            ./images/Rastr_img/3.Desktop/Portfolio-3@2x-min.jpg 720w,
                             ./images/Rastr_img/2.Tablet/Portfolio-3-min.jpg 356w,
-                            ./images/Rastr_img/1.Tel/Portfolio-3-min.jpg 288w"
+                            ./images/Rastr_img/2.Tablet/Portfolio-3@2x-min.jpg 712w,
+                            ./images/Rastr_img/1.Tel/Portfolio-3-min.jpg 288w,
+                            ./images/Rastr_img/1.Tel/Portfolio-3@2x-min.jpg 576w"
                     sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
                     src="./images/Rastr_img/1.Tel/Portfolio-3-min.jpg" alt="meditation" width="360">
                     <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p> 
@@ -304,8 +313,11 @@
                     <div class="container-portfolio">
                     <img 
                     srcset="./images/Rastr_img/3.Desktop/Portfolio-4-min.jpg 360w,
+                            ./images/Rastr_img/3.Desktop/Portfolio-4@2x-min.jpg 720w,
                             ./images/Rastr_img/2.Tablet/Portfolio-4-min.jpg 356w,
-                            ./images/Rastr_img/1.Tel/Portfolio-4-min.jpg 288w"
+                            ./images/Rastr_img/2.Tablet/Portfolio-4@2x-min.jpg 712w,
+                            ./images/Rastr_img/1.Tel/Portfolio-4-min.jpg 288w,
+                            ./images/Rastr_img/1.Tel/Portfolio-4@2x-min.jpg 576w"
                     sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
                     src="./images/Rastr_img/1.Tel/Portfolio-4-min.jpg" alt="taxi" width="360">
                     <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p> 
@@ -317,8 +329,11 @@
                     <div class="container-portfolio">
                     <img 
                     srcset="./images/Rastr_img/3.Desktop/Portfolio-5-min.jpg 360w,
+                            ./images/Rastr_img/3.Desktop/Portfolio-5@2x-min.jpg 720w,
                             ./images/Rastr_img/2.Tablet/Portfolio-5-min.jpg 356w,
-                            ./images/Rastr_img/1.Tel/Portfolio-5-min.jpg 288w"
+                            ./images/Rastr_img/2.Tablet/Portfolio-5@2x-min.jpg 712w,
+                            ./images/Rastr_img/1.Tel/Portfolio-5-min.jpg 288w,
+                            ./images/Rastr_img/1.Tel/Portfolio-5@2x-min.jpg 576w"
                     sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
                     src="./images/Rastr_img/1.Tel/Portfolio-5-min.jpg" alt="screen" width="360">
                     <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
@@ -330,8 +345,11 @@
                     <div class="container-portfolio">
                     <img 
                     srcset="./images/Rastr_img/3.Desktop/Portfolio-6-min.jpg 360w,
+                            ./images/Rastr_img/3.Desktop/Portfolio-6@2x-min.jpg 720w,
                             ./images/Rastr_img/2.Tablet/Portfolio-6-min.jpg 356w,
-                            ./images/Rastr_img/1.Tel/Portfolio-6-min.jpg 288w"
+                            ./images/Rastr_img/2.Tablet/Portfolio-6@2x-min.jpg 712w,
+                            ./images/Rastr_img/1.Tel/Portfolio-6-min.jpg 288w,
+                            ./images/Rastr_img/1.Tel/Portfolio-6@2x-min.jpg 576w"
                     sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
                     src="./images/Rastr_img/1.Tel/Portfolio-6-min.jpg" alt="oncourses" width="360">
                     <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
