--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 
              <!-- SECTION PORTFOLIO -->
 
-        <section class="portfolio-section">
+        <!-- <section class="portfolio-section">
             <div class="container">
             <h2 class="table-portfolio">Our Portfolio</h2>
             <ul class="portfolio-list list">
@@ -359,7 +359,7 @@
                 </li>
             </ul>
             </div>
-        </section>
+        </section> -->
     </main>
 
                 <!-- FOOTER -->
