--- a/index.html
+++ b/index.html
@@ -414,8 +414,9 @@
 </div>
     </footer>
 
-<!-- BACKDROP WITH MODAL WINDOW -->
-<div class="backdrop">
+                  <!-- BACKDROP WITH MODAL WINDOW -->
+
+<!-- <div class="backdrop">
     <div class="modal">
         <button class="close-button" type="button">
             <svg class="close-button-icon" width="8" height="8" aria-label="modal close icon">
@@ -483,17 +484,17 @@
             </div>
             <button class="rewiew-form-send" type="button">Send</button>
         </form>
-    </div>
+    </div> -->
 
                 <!-- MOBILE MENU -->
 
-<div class="mobile-menu">
+<!-- <div class="mobile-menu">
     <button class="mob-menu-close-btn">
         <svg class="mbc-btn" width="8" height="8" aria-label="mobile close button">
             <use href="./images/icons.svg#icon-close-black"></use>
         </svg>
     </button>
-</div>
+</div> -->
 
 </div>
 
