--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </ul>
         </address>
     </div>
-    </header> --> -->
+    </header> -->
     <main>
 
                 <!-- SECTION EFECTIVE -->
@@ -488,13 +488,13 @@
 
                 <!-- MOBILE MENU -->
 
-<!-- <div class="mobile-menu">
+<div class="mobile-menu">
     <button class="mob-menu-close-btn">
         <svg class="mbc-btn" width="8" height="8" aria-label="mobile close button">
             <use href="./images/icons.svg#icon-close-black"></use>
         </svg>
     </button>
-</div> -->
+</div>
 
 </div>
 
