--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
                 <!-- HEADER -->
 
-    <!-- <header class="header">
+    <header class="header">
         <div class="header-container container">
         <nav class="navigation">
             <a href="" class="nav-logo link">WEb<span class="studio">Studio</span></a>
@@ -38,7 +38,7 @@
             </ul>
         </address>
     </div>
-    </header> -->
+    </header>
     <main>
 
                 <!-- SECTION EFECTIVE -->
@@ -364,7 +364,7 @@
 
                 <!-- FOOTER -->
 
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="container allfoot-container">
         <div class="logo-footer-container">
     <a href="./index.html" class="foot-logo link">Web<span class="footer-studio">Studio</span></a>
@@ -412,7 +412,7 @@
         </form>
     </div>
 </div>
-    </footer>
+    </footer> -->
 
                   <!-- BACKDROP WITH MODAL WINDOW -->
 
