--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
 
                   <!-- BACKDROP WITH MODAL WINDOW -->
 
-<div class="backdrop">
+<!-- <div class="backdrop">
     <div class="modal">
         <button class="close-button" type="button">
             <svg class="close-button-icon" width="8" height="8" aria-label="modal close icon">
@@ -484,7 +484,7 @@
             </div>
             <button class="rewiew-form-send" type="button">Send</button>
         </form>
-    </div>
+    </div> -->
 
                 <!-- MOBILE MENU -->
 
