--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
                 <!-- SECTION EFECTIVE -->
 
-        <!-- <section class="section-effective">
+        <!-- <!-- <section class="section-effective">
             <div class="container">
         <h1 class="table-effective">Effective Solutions for Your Business</h1>
         <button class="button-effective" type="button">Order Service</button>
@@ -91,7 +91,7 @@
                 </li>
             </ul>
         </div>
-        </section>
+        </section> -->
 
                 <!-- SECTION TEAM -->
 
@@ -364,8 +364,8 @@
 
                 <!-- FOOTER -->
 
-    <!-- <footer class="footer">
-        <div class="container allfoot-container">
+    <footer class="footer">
+        <div class="container-foot allfoot-container">
         <div class="logo-footer-container">
     <a href="./index.html" class="foot-logo link">Web<span class="footer-studio">Studio</span></a>
     <p class="text-footer">
@@ -412,7 +412,7 @@
         </form>
     </div>
 </div>
-    </footer> -->
+    </footer>
 
                   <!-- BACKDROP WITH MODAL WINDOW -->
 
