--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                 <!-- FOOTER -->
 
     <footer class="footer">
-        <div class="container-foot allfoot-container">
+        <div class="container allfoot-container">
         <div class="logo-footer-container">
     <a href="./index.html" class="foot-logo link">Web<span class="footer-studio">Studio</span></a>
     <p class="text-footer">
@@ -488,7 +488,7 @@
 
                 <!-- MOBILE MENU -->
 
-<div class="mobile-menu">
+<div class="mobile-menu.is-open">
     <button class="mob-menu-close-btn">
         <svg class="mbc-btn" width="8" height="8" aria-label="mobile close button">
             <use href="./images/icons.svg#icon-close-black"></use>
