--- a/index.html
+++ b/index.html
@@ -488,12 +488,43 @@
 
                 <!-- MOBILE MENU -->
 
-<div class="mobile-menu.is-open">
+<div class="mobile-menu is-open">
     <button class="mob-menu-close-btn">
         <svg class="mbc-btn" width="8" height="8" aria-label="mobile close button">
             <use href="./images/icons.svg#icon-close-black"></use>
         </svg>
     </button>
+    <ul class="nav-menu-list list">
+        <li> <a class="navigation-menu-link link studio-menu-link" href="./index.html">Studio</a></li>
+        <li> <a class="navigation-menu-link link" href="">Portfolio</a></li>
+        <li> <a class="navigation-menu-link link" href="">Contacts</a></li>
+    </ul>
+    <ul class="adress-menu-list list">
+        <li> <a class="adress-menu-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li> <a class="adress-menu-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+    </ul>
+    <ul class="menu-soclist list">
+        <li class="menu-soclist-icon"><a href="" class="menu-soclist-link">
+           <svg class="svg-menu" width="24" height="24" aria-label="icon-instagram">
+            <use href="./images/icons.svg#icon-instagram-1"></use>
+           </svg> 
+        </a></li>
+        <li class="menu-soclist-icon"><a href="" class="menu-soclist-link">
+           <svg class="svg-menu"  width="24" height="24" aria-label="icon-twitter">
+            <use href="./images/icons.svg#icon-twitter-1"></use>
+           </svg> 
+        </a></li>
+        <li class="menu-soclist-icon"><a href="" class="menu-soclist-link">
+           <svg class="svg-menu" width="24" height="24" aria-label="icon-facebook">
+            <use href="./images/icons.svg#icon-facebook-1"></use>
+           </svg> 
+        </a></li>
+        <li class="menu-soclist-icon"><a href="" class="menu-soclist-link">
+           <svg class="svg-menu" width="24" height="24" aria-label="icon-linkedin">
+            <use href="./images/icons.svg#icon-linkedin-1"></use>
+           </svg> 
+        </a></li>
+    </ul>
 </div>
 
 </div>
