--- a/index.html
+++ b/index.html
@@ -494,15 +494,19 @@
             <use href="./images/icons.svg#icon-close-black"></use>
         </svg>
     </button>
+    <nav class="menu-nav">
     <ul class="nav-menu-list list">
         <li> <a class="navigation-menu-link link studio-menu-link" href="./index.html">Studio</a></li>
         <li> <a class="navigation-menu-link link" href="">Portfolio</a></li>
         <li> <a class="navigation-menu-link link" href="">Contacts</a></li>
     </ul>
+    </nav>
+    <address class="menu-adress">
     <ul class="adress-menu-list list">
         <li> <a class="adress-menu-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li> <a class="adress-menu-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
     </ul>
+    </address>
     <ul class="menu-soclist list">
         <li class="menu-soclist-icon"><a href="" class="menu-soclist-link">
            <svg class="svg-menu" width="24" height="24" aria-label="icon-instagram">
