--- a/index.html
+++ b/index.html
@@ -496,14 +496,14 @@
     </button>
     <nav class="menu-nav">
     <ul class="nav-menu-list list">
-        <li> <a class="navigation-menu-link link studio-menu-link" href="./index.html">Studio</a></li>
+        <li> <a class="link studio-menu-link" href="./index.html">Studio</a></li>
         <li> <a class="navigation-menu-link link" href="">Portfolio</a></li>
         <li> <a class="navigation-menu-link link" href="">Contacts</a></li>
     </ul>
     </nav>
     <address class="menu-adress">
     <ul class="adress-menu-list list">
-        <li> <a class="adress-menu-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li> <a class="adress-menu-mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li> <a class="adress-menu-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
     </ul>
     </address>
