--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
                 <!-- SECTION EFECTIVE -->
 
-        <!-- <!-- <section class="section-effective">
+        <section class="section-effective">
             <div class="container">
         <h1 class="table-effective">Effective Solutions for Your Business</h1>
         <button class="button-effective" type="button">Order Service</button>
@@ -91,11 +91,11 @@
                 </li>
             </ul>
         </div>
-        </section> -->
+        </section>
 
                 <!-- SECTION TEAM -->
 
-        <!-- <section class="section-team">
+        <section class="section-team">
             <div class="container">
             <h2 class="table-team">Our Team</h2>
             <ul class="team-container list">
@@ -253,11 +253,11 @@
                 </li>
             </ul>
         </div>
-        </section> -->
+        </section>
 
              <!-- SECTION PORTFOLIO -->
 
-        <!-- <section class="portfolio-section">
+        <section class="portfolio-section">
             <div class="container">
             <h2 class="table-portfolio">Our Portfolio</h2>
             <ul class="portfolio-list list">
@@ -359,7 +359,7 @@
                 </li>
             </ul>
             </div>
-        </section> -->
+        </section>
     </main>
 
                 <!-- FOOTER -->
@@ -416,7 +416,7 @@
 
                   <!-- BACKDROP WITH MODAL WINDOW -->
 
-<!-- <div class="backdrop">
+<div class="backdrop">
     <div class="modal">
         <button class="close-button" type="button">
             <svg class="close-button-icon" width="8" height="8" aria-label="modal close icon">
@@ -484,11 +484,11 @@
             </div>
             <button class="rewiew-form-send" type="button">Send</button>
         </form>
-    </div> -->
+    </div>
 
                 <!-- MOBILE MENU -->
 
-<div class="mobile-menu is-open">
+<div class="mobile-menu">
     <button class="mob-menu-close-btn">
         <svg class="mbc-btn" width="8" height="8" aria-label="mobile close button">
             <use href="./images/icons.svg#icon-close-black"></use>
