--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <!-- SECTION TEAM -->
 
         <section class="section-team">
-            <div class="container">
+            <div class="container team-div-container">
             <h2 class="table-team">Our Team</h2>
             <ul class="team-container list">
                 <li class="team-list">
